# ae-duvisor

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  auto-fast.sh  auto-firesim.sh  auto-mid.sh  auto-test.sh  build.rs  extract_test_data.py  loop_test.sh  preparefile.rs
.gitlab/issue_templates/: Bug.md
.gitlab/merge_request_templates/: Enhancement.md  Newfeature.md
app/: .gitignore  ioctl_test  ioctl_test.c
firesim-scripts/: copy_laputa_to_vm.sh  docker_build_laputa.sh  kvm.sh  laputa.sh  pull_fsim_log.sh
firesim-scripts/east/: kvm.sh  pull_fsim_log.sh
firesim-scripts/scripts-laputa/: 1_core.expect  1_core.expect.apache  1_core.expect.auto  1_core.expect.bak  1_core.expect.breakdown  1_core.expect.breakdown.netapp  1_core.expect.dd  1_core.expect.debug.fileio  1_core.expect.debug.iperf3  1_core.expect.debug.memcached  1_core.expect.fileio  1_core.expect.full  1_core.expect.init-memcached  1_core.expect.iperf  1_core.expect.iperf3  1_core.expect.iperf31111  1_core.expect.iperf_udp  1_core.expect.native  1_core.expect.netperf  1_core.expect.rx_opt  start.sh  vm.expect  (+2 more)
guestentry/: asm_offset.h  csr.h  enter_guest.S  guest_entry.c  guest_entry.h  save_restore.S
nightly-scripts/: kvm-2.sh  kvm-6.sh  laputa-1.sh  laputa-2.sh  laputa-4.sh  laputa-6.sh  seq-tmpl
scripts/: boot.sh  build_linux.sh  build_qemu.sh  copy_laputa_to_vm.sh  copy_ulh_to_vm.sh  expect_wrapper.sh  install_linux.exp  laputa_test.exp  laputa_test_main.tcl  run_tests.sh  ulh_test.exp
src/: 2q  clap_config.yml  lib.rs  main.rs
tests/: common.rs  vcpu_tests.rs  vm_tests.rs
(+295 files in other folders)
