[package]
name = "laputa"
version = "0.1.0"
authors = ["Zeyu Mi <yzmizeyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
colored = "2"
libc = ">=0.2.39"
rusty-fork = "0.3.0"
elf = "0.0.10"

[build-dependencies]
gcc = "0.3"
cc = "1.0"


